--- a/UserCollection.WebAPP/Views/Shared/_LoginPartial.cshtml
+++ b/UserCollection.WebAPP/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,18 @@
 @inject UserManager<IdentityUser> UserManager
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
+@if(User.IsInRole("admin"))
+{
+    <li class="nav-item">
+       <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Users">Users</a>
+    </li>
+    <li class="nav-item">
+        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Collection", new { area = "" })">
+            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+        </form>
+    </li>
+}
+else if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
        <a class="nav-link text-dark" asp-area="" asp-controller="Collection" asp-action="UserCollections">My Collection</a>
