--- a/UserCollection.WebAPP/Views/Collection/Index.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Index.cshtml
@@ -18,12 +18,11 @@
         <div class="col-md-4 mb-4">
             <a href="@Url.Action("Details", new {id = item.Id})" class="card-link text-dark text-decoration-none">
                 <div class="card">
-                    <img src="@item.ImageUrl" class="card-img-top" alt="Collection Image">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
                         <p class="card-text">@item.Description</p>
-                        <p class="card-text"><strong>User ID:</strong> @item.UserId</p>
-                        <p class="card-text"><strong>Category ID:</strong> @item.CategoryId</p>
+                        <p class="card-text"><strong>Author:</strong> @item.UserName</p>
+                        <p class="card-text"><strong>Category:</strong> @item.Category.Name</p>
                     </div>
                 </div>
             </a>
