--- a/UserCollection.WebAPP/Views/Collection/UserCollections.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/UserCollections.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<UserCollection.WebAPI.Models.CollectionModel>
 
 @{
-    ViewData["Title"] = "UserCollections";
+    ViewData["Title"] = "AllCollections";
 }
 
-<h1>UserCollections</h1>
-
+<h1>My collections</h1>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -13,19 +12,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UserName)
@@ -34,7 +24,7 @@
                 @Html.DisplayNameFor(model => model.IsPrivate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CategoryId)
+                Category
             </th>
             <th></th>
         </tr>
@@ -43,19 +33,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
@@ -64,7 +45,7 @@
                 @Html.DisplayFor(modelItem => item.IsPrivate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CategoryId)
+                @Html.DisplayFor(modelItem => item.Category.Name)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
