--- a/UserCollection.WebAPP/Views/Collection/_TenNewItemsPartial.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/_TenNewItemsPartial.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => collection.UserId)
+                @Html.DisplayFor(modelItem => collection.UserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
