--- a/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
+++ b/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
@@ -13,16 +13,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreatedDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CollectionId)
+                Collection
             </th>
             <th></th>
         </tr>
@@ -31,16 +28,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CollectionId)
+                @Html.DisplayFor(modelItem => item.Collection.Name)
             </td>
             <td>
                 @Html.ActionLink("Edit", "ItemEdit", new {  id=item.Id }) |
