--- a/UserCollection.WebAPP/Views/Item/ItemEdit.cshtml
+++ b/UserCollection.WebAPP/Views/Item/ItemEdit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "ItemEdit";
 }
 
-<h1>ItemEdit</h1>
+<h1>Edit</h1>
 
-<h4>ItemModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -150,6 +149,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="CollectionItems" asp-route-id="@Model.CollectionId">Back to List</a>
 </div>
 
