--- a/UserCollection.WebAPP/Views/Item/SearchResult.cshtml
+++ b/UserCollection.WebAPP/Views/Item/SearchResult.cshtml
@@ -2,19 +2,13 @@
 
 @{
     ViewData["Title"] = "SearchResult";
+    var isAdmin = User.IsInRole("admin");
 }
 
-<h1>SearchResult</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>Result</h1>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -22,17 +16,15 @@
                 @Html.DisplayNameFor(model => model.CreatedDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CollectionId)
+                Collection
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in isAdmin ? Model : Model.Where(i => i.Collection.IsPrivate == false))
+        {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -40,12 +32,10 @@
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CollectionId)
+                @Html.DisplayFor(modelItem => item.Collection.Name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Details", "ItemDetails", new { id = item.Id })
             </td>
         </tr>
 }
