--- a/UserCollection.WebAPP/Views/Shared/_Layout.cshtml
+++ b/UserCollection.WebAPP/Views/Shared/_Layout.cshtml
@@ -21,14 +21,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between align-items-center">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item flex-fill">
-                            <form asp-controller="Item" asp-action="SearchResult" method="GET">
-                        <li class="nav-item flex-fill">
+                            <form asp-controller="Item" asp-action="SearchResult" method="GET" class="d-flex">
+                         <li class="nav-item flex-fill">
                             <input type="text" name="query" class="form-control" placeholder="find.." />
-                        </li>
-                        <li class="nav-item flex-fill">
+                         </li>
+                         <li class="nav-item">
                             <button type="submit" class="btn btn-primary">Search</button>
-                        </li>
-                        </form>
+                         </li>
+                          </form>
                         </li>
                     </ul>
                     
