Fix page names and fix buttons

--- a/UserCollection.WebAPP/Views/Collection/Details.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Details.cshtml
@@ -177,5 +177,5 @@
     {
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
     }
-    <a asp-action="Index">Back to List</a>
+    <button onclick="location.href='@Url.Action("UserCollections")'" class="btn btn-secondary">Back to List</button>
 </div>
