--- a/UserCollection.WebAPP/Views/Collection/Edit.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Edit.cshtml
@@ -46,6 +46,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button onclick="location.href='@Url.Action("UserCollections")'" class="btn btn-secondary">Back to List</button>
 </div>
 
