Add comment partial page

--- a/UserCollection.WebAPP/Views/Item/ItemDetails.cshtml
+++ b/UserCollection.WebAPP/Views/Item/ItemDetails.cshtml
@@ -185,3 +185,7 @@
     
     <a asp-action="CollectionItems" asp-route-id="@Model.CollectionId">Back to List</a>
 </div>
+
+<div class="container">
+    <partial name="_CommentPartial" model="@Model" />
+</div>
