--- a/UserCollection.WebAPP/Views/Collection/_TenNewItemsPartial.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/_TenNewItemsPartial.cshtml
@@ -30,22 +30,23 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in allItems.OrderByDescending(i => i.CreatedDate).Take(10)) {
+        @foreach (var item in allItems.OrderByDescending(i => i.CreatedDate).Take(10))
+        {
             var collection = Model.FirstOrDefault(c => c.Items.Any(i => i.Id == item.Id));
-            <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => collection.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => collection.Name)
-            </td>
-        </tr>
-}
+            <tr onclick="window.location.href = '@Url.Action("ItemDetails", "Item", new { id = item.Id })';">
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => collection.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => collection.Name)
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
