--- a/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
+++ b/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
@@ -63,7 +63,7 @@
 
                     }
                     
-                    <button onclick="location.href='@Url.Action("ItemDetails", new { id = item.Id })'" class="btn btn-primary">Details</button> |
+                    <button onclick="location.href='@Url.Action("ItemDetails", new { id = item.Id })'" class="btn btn-primary">Details</button>
                     
                 </td>
 
