--- a/UserCollection.WebAPP/Views/Collection/Details.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Details.cshtml
@@ -182,3 +182,7 @@
         <button type="submit" class="btn btn-secondary">Back to List</button>
     </form>
 </div>
+
+<div>
+    <button onclick="location.href='@Url.Action("CollectionItems", "Item", new { id = Model.Id })'" class="btn btn-primary">Items</button>
+</div>
