--- a/UserCollection.WebAPP/Views/Collection/Index.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Index.cshtml
@@ -23,9 +23,53 @@
     }
     <div class="table">
         @{
-            await Html.RenderPartialAsync("_TenNewItemsPartial", Model);
+            ViewData["Title"] = "_FiveNewItemsPartial";
+            var allItems = new List<ItemModel>();
+            foreach (var collection in Model)
+            {
+                allItems.AddRange(collection.Items);
+            }
         }
-    </div>
 
- 
+        <h1>Last added Items</h1>
+
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Author
+                    </th>
+                    <th>
+                        Creating date
+                    </th>
+                    <th>
+                        Collection Name
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in allItems.OrderByDescending(i => i.CreatedDate).Take(10))
+                {
+                    var collection = Model.FirstOrDefault(c => c.Items.Any(i => i.Id == item.Id));
+                    <tr onclick="window.location.href = '@Url.Action("ItemDetails", "Item", new { id = item.Id })';">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => collection.UserName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreatedDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => collection.Name)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
