--- a/UserCollection.WebAPP/Views/Shared/_LoginPartial.cshtml
+++ b/UserCollection.WebAPP/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,9 @@
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Collection" asp-action="UserCollections">My Collection</a>
+        </li>
 }
 else if (SignInManager.IsSignedIn(User))
 {
@@ -20,7 +23,7 @@ else if (SignInManager.IsSignedIn(User))
        <a class="nav-link text-dark" asp-area="" asp-controller="Collection" asp-action="UserCollections">My Collection</a>
     </li>
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">My profile</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Collection", new { area = "" })">
