--- a/UserCollection.WebAPP/Views/Collection/Index.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    @foreach (var item in Model.OrderByDescending(c => c.Items.Count()).Take(5))
+    @foreach (var item in Model)
     {
         <div class="col-md-4 mb-4">
             <a href="@Url.Action("Details", new {id = item.Id})" class="card-link text-dark text-decoration-none">
