--- a/UserCollection.WebAPP/Views/Collection/Index.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    var items = ViewBag.Items as List<ItemModel>;
 }
 
 <div class="row">
@@ -22,15 +23,6 @@
         </div>
     }
     <div class="table">
-        @{
-            ViewData["Title"] = "_FiveNewItemsPartial";
-            var allItems = new List<ItemModel>();
-            foreach (var collection in Model)
-            {
-                allItems.AddRange(collection.Items);
-            }
-        }
-
         <h1>Last added Items</h1>
 
         <table class="table table-striped">
@@ -51,7 +43,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in allItems.OrderByDescending(i => i.CreatedDate).Take(10))
+                @foreach (var item in items)
                 {
                     var collection = Model.FirstOrDefault(c => c.Items.Any(i => i.Id == item.Id));
                     <tr onclick="window.location.href = '@Url.Action("ItemDetails", "Item", new { id = item.Id })';">
@@ -59,13 +51,13 @@
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => collection.UserName)
+                            @Html.DisplayFor(modelItem => item.Collection.UserName)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CreatedDate)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => collection.Name)
+                            @Html.DisplayFor(modelItem => item.Collection.Name)
                         </td>
                     </tr>
                 }
