--- a/UserCollection.WebAPP/Views/Collection/AllCollections.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/AllCollections.cshtml
@@ -23,7 +23,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in isAdmin ? Model : Model.Where(c => c.IsPrivate == false))
+        @foreach (var item in Model)
         {
             <tr onclick="window.location.href = '@Url.Action("Details", "Collection", new { id = item.Id })';">
                 <td>
