fix title on AllCollection page

--- a/UserCollection.WebAPP/Views/Collection/AllCollections.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/AllCollections.cshtml
@@ -5,7 +5,7 @@
     var isAdmin = User.IsInRole("admin");
 }
 
-<h1>All collection + @Model.CountOfPage</h1>
+<h1>All collection</h1>
 
 <table class="table">
     <thead>
